--- a/index.html
+++ b/index.html
@@ -53,14 +53,82 @@
                 <h2>NIKE ZOOMPFLY SP FAST <span class="new ml-3">NEW</span>
                 </h2>
                 <i class="fas fa-share-alt"></i>
-                <p class="d-block">MINT GREY</p>
+                <p class="d-block mb-3">MINT GREY</p>
+                <ul class="p-0 star d-flex align-items-center">
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li class="last"><i class="fas fa-star"></i></li>
+                </ul>
                 <div class="des">
                     <ul class="p-0">
-                        <li><a href="" class="active">DESCRIPTION</a></li>
+                        <li><a href="" class="activei">DESCRIPTION</a></li>
                         <li><a href="">DETAILS</a></li>
                         <li><a href="">REVIEWS</a></li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam vel officiis iure modi ducimus maiores at dolorem alias ex explicabo, odio praesentium quis adipisci beatae. Alias, iusto ab suscipit tempora!</p>
+                    <p class="nikeContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam vel officiis iure modi ducimus maiores at dolorem alias ex explicabo, odio praesentium quis adipisci beatae. Alias, iusto ab suscipit tempora! Lorem ipsum dolor sit amet, consectetur adipisicing elit. In recusandae, illo, at, optio deleniti non debitis distinctio assumenda tempora saepe, quod? Iure nihil reprehenderit quas sapiente iusto pariatur ullam sequi ipsam nemo.
+                    </p>
+                </div>
+                <div class="color">
+                    <h2>COLOR</h2>
+                    <ul class="colorul">
+                        <li class="colorli">
+                            <div class="itemMain greenmain">
+                                <div class="item green1"></div>
+                            </div>
+                        </li>
+                        <li class="colorli">
+                            <div class="itemMain blueMain">
+                                <div class="item blue1"></div>
+                            </div>
+                        </li>
+                        <li class="colorli">
+                            <div class="itemMain greyMain">
+                                <div class="item grey1"></div>
+                            </div>
+                        </li>
+                        <li class="colorli">
+                            <div class="itemMain orangeMain">
+                                <div class="item orange1"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="size">
+                    <h2>SIZE</h2>
+                    <ul class="p-0 sizeul pt-2">
+                        <li class="sizeli mr-4">7</li>
+                        <li class="sizeli mr-4">8</li>
+                        <li class="sizeli mr-4">9</li>
+                        <li class="sizeli mr-4 active2">10</li>
+                        <li class="sizeli">11</li>
+                    </ul>
+                </div>
+                <div class="qty mt-5">
+                    <h2>QTY</h2>
+                    <div class="dropdown">
+
+                        <!--Trigger-->
+                        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">1 <span class="text-right pl-5"><i class="fas fa-angle-down"></i>
+                            </span>
+                        </button>
+
+                        <!--Menu-->
+                        <div class="dropdown-menu dropdown-primary">
+                            <a class="dropdown-item" href="#">2</a>
+                            <a class="dropdown-item" href="#">3</a>
+                            <a class="dropdown-item" href="#">4</a>
+                            <a class="dropdown-item" href="#">5</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="cart mt-5">
+                    <button class="btn peach-gradient d-inline-block">
+                        <span class="float-left mr-3"><i class="fas fa-shopping-cart"></i></span>ADD TO CART
+                    </button>
+                    <button type="button" class="btn btn-link d-inline-block"><span class="mr-3"><i class="far fa-heart"></i></span>ADD TO WISHLIST
+                    </button>
                 </div>
             </div>
         </div>
